--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,42 @@
-.App {
+
+header {
+  padding: 20px;
+  text-align: right;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
+
+
+footer {
+  padding: 50px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
+
+.img1 {
+  float: left;
+}
+
+.img2 {
+  padding: 30px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-link {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(255, 255, 255);
+  flex-direction: row;
+  align-items: flex-end;
+  padding-right: 50 px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
