checked out a branch with the correct naming conventions and pushed up last bit of changes with the notfound.js file

--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,17 @@ footer {
 
 
 .img1 {
-  float: left;
+  float: right;
 }
 
 .img2 {
   padding: 30px;
   text-align: center;
+}
+.img3 {
+  padding: 30px;
+  text-align: center;
+
 }
 
 .nav-link {
@@ -39,4 +44,3 @@ footer {
   clear: both;
   display: table;
 }
-
